Time to practice wrapping paper